feat: 🎸 derivative detail

--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -44,3 +44,11 @@
   margin:0px;
   line-height: 22px;
 }
+.derivative-content{
+  display: flex;
+  flex-direction: column;
+}
+.derivative-content-table{
+  flex:1;
+  overflow: auto;
+}
