feat: 🎸 resource business component

--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -7,6 +7,7 @@
   margin:0px;
   border-right: 1px rgba(16, 38, 58, 0.15) solid;
 }
+
 .derivative{
   .alg-list{
     height: calc(~'100%' - 46px) !important;
@@ -50,5 +51,9 @@
 }
 .derivative-content-table{
   flex:1;
+  overflow: auto;
+}
+.detail-table{
+  height:500px;
   overflow: auto;
 }
