--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -9,6 +9,8 @@
 }
 
 .derivative{
+  height:300px;
+  overflow: auto;
   .alg-list{
     height: calc(~'100%' - 46px) !important;
   } 
@@ -20,10 +22,10 @@
 .footer-tile{
   border-top:1px solid rgba(16, 38, 58, 0.15);
   border-bottom:1px solid rgba(16, 38, 58, 0.15);
-  line-height: 22px;
-  padding: 16px;
   color: rgba(0, 0, 0, 0.45);
+  padding: 15px 20px;
   font-size: 14px;
+  overflow: hidden;
 }
 .mess{
   border-radius: 2px;
