feat: 🎸 collapse change size

--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -33,6 +33,9 @@
   font-size: 14px;
   overflow: hidden;
 }
+.footer-table{
+  overflow: auto;
+}
 .mess{
   border-radius: 2px;
   background-color: #fafafa;
