--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -24,6 +24,7 @@
   height:230px;
   padding:0px;
   background-color: white;
+  min-height: 130px;
 }
 .footer-tile{
   border-top:1px solid rgba(16, 38, 58, 0.15);
@@ -35,6 +36,9 @@
 }
 .footer-table{
   overflow: auto;
+  .ant-empty{
+    margin:13px 0 !important;
+  }
 }
 .mess{
   border-radius: 2px;
