--- a/packages/zet-component/src/automl/derivative/index.less
+++ b/packages/zet-component/src/automl/derivative/index.less
@@ -3,6 +3,9 @@
   display:flex;
   flex-direction: column;
   overflow: hidden;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  user-select:none;    
 }
 .sider-title{
   font-size: 14px;
